--- a/index.html
+++ b/index.html
@@ -1,28 +1,93 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
-  <title>Sadeus Family</title>
-  <meta charset="UTF-8">
-  <style>
-    body {
-      background-color: black;
-      color: gold;
-      text-align: center;
-      font-family: Arial, sans-serif;
-      padding-top: 100px;
-    }
-    h1 {
-      font-size: 50px;
-      letter-spacing: 5px;
-    }
-    p {
-      font-size: 20px;
-      color: white;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Sadeus Family</title>
+<style>
+  body {
+    margin: 0;
+    font-family: 'Arial Black', sans-serif;
+    background: linear-gradient(135deg, #000000, #1a1a1a);
+    color: #FFD700;
+    padding: 40px;
+    line-height: 1.5;
+  }
+  h1 {
+    font-size: 4em;
+    text-align: center;
+    margin-bottom: 10px;
+    animation: glow 2s infinite alternate;
+  }
+  h2 {
+    font-size: 2em;
+    margin-top: 30px;
+    border-bottom: 1px solid #FFD700;
+    display: inline-block;
+    padding-bottom: 5px;
+  }
+  p, li {
+    color: white;
+    font-size: 1.1em;
+  }
+  ul {
+    list-style: none;
+    padding-left: 0;
+  }
+  li {
+    margin: 5px 0;
+  }
+  @keyframes glow {
+    from { text-shadow: 0 0 10px #FFD700; }
+    to { text-shadow: 0 0 30px #FFEA00, 0 0 50px #FFD700; }
+  }
+  .divider {
+    text-align: center;
+    color: #FFD700;
+    margin: 30px 0;
+  }
+</style>
 </head>
 <body>
-  <h1>SADEUS</h1>
-  <p>L’autorité ne se discute pas, elle s’impose.</p>
+
+<h1>◈ 𓆙 𝘽𝙞𝙚𝙣𝙫𝙚𝙣𝙪𝙚 au cœur de la famille Sadeus ☘️</h1>
+
+<p>◈ 𝗡𝗼𝘂𝘀 𝗻𝗲 𝗰𝗼𝗻𝗻𝗮𝗶𝘀𝘀𝗼𝗻𝘀 pas l'impossible car ceux qu'ils appellent impossible est possible chez les Sadeus.</p>
+
+<p>◈ 𝗟𝗮 𝗽𝘂𝗿𝗴𝗲 nous appartient. Nous vivons que pour la domination, nous distribuons l'humiliation à ceux qui osent nous défier. Nous ne connaissons pas ce mot qu'ils appellent "défaite". Notre ascension est sans échelle, seules les étoiles sont nos collègues. Nous n'avons pas de rivale car la perfection n'a pas de rivale.</p>
+
+<p>◈ 𝗘𝗻 𝘁𝗮𝗻𝘁 que famille numéro 𝟭 du réseau, notre suprématie est acquise.</p>
+
+<h2>CLAN DOMINER</h2>
+<ul>
+<li>1. 𝑺𝑶𝑴𝑨</li>
+<li>2. 𝑵𝑨𝑹𝑨</li>
+<li>3. 𝑴𝑷𝑲</li>
+<li>4. 𝑺𝑯𝑰𝑵𝑱𝑰</li>
+<li>5. 𝑺𝑯𝑨𝑫𝑶𝑾</li>
+<li>6. 𝑻𝑴𝑷</li>
+<li>7. 𝑮𝑯𝑶𝑺𝑻</li>
+<li>8. 𝑴𝑬𝑫𝑼𝒁𝑨</li>
+<li>9. 𝑫𝑨𝑹𝑲 𝑹𝑬𝑰𝑮𝑵</li>
+<li>10. 𝑱𝑼𝑮𝑬𝑴𝑬𝑵𝑻 𝑹𝑬𝑫𝑬𝑲𝑨𝑰</li>
+<li>11. 𝑺𝑯𝑬𝑳𝑩𝒀</li>
+<li>12. 𝑨𝑮𝑹𝑬𝑺𝑻𝑬</li>
+<li>13. 𝑩𝑰𝑮𝑫𝑬𝑨𝑳 ×2</li>
+<li>14. 𝐙𝐄𝐍𝐈𝐍</li>
+<li>15. 𝑮𝑶𝑷-3</li>
+<li>16. 𝐒𝐇𝐀𝐃𝐎𝐖 𝐎𝐅 𝐓𝐇𝐄 𝐌𝐎𝐎𝐍</li>
+<li>17. 𝐁𝐋𝐎𝐎𝐃 𝐋𝐈𝐍𝐄</li>
+<li>18. 𝐘𝐀𝐌𝐀𝐃𝐀</li>
+<li>19. 𝐇𝐎𝐒𝐓𝐄𝐋🆕</li>
+</ul>
+
+<h2>JOURNAL DOMINER</h2>
+<ul>
+<li>1. 𝑭𝑼𝑹𝑰𝑶𝒁𝑨 𝑷𝑹𝑶</li>
+</ul>
+
+<div class="divider">♛════•✧•════♛</div>
+<p>𝗩𝗜𝗩𝗘 𝗟𝗘𝗦 𝗦𝗔𝗗𝗘𝗨𝗦</p>
+<div class="divider">♛════•✧•════♛</div>
+
 </body>
-</html>
+  </html>
