--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <li>16. 𝐒𝐇𝐀𝐃𝐎𝐖 𝐎𝐅 𝐓𝐇𝐄 𝐌𝐎𝐎𝐍</li>
 <li>17. 𝐁𝐋𝐎𝐎𝐃 𝐋𝐈𝐍𝐄</li>
 <li>18. 𝐘𝐀𝐌𝐀𝐃𝐀</li>
-<li>19. 𝐇𝐎𝐒𝐓𝐄𝐋🆕</li>
+<li>19. 𝐇𝐎𝐒𝐓𝐄𝐋</li>
 </ul>
 
 <h2>JOURNAL DOMINER</h2>
