--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
 <meta charset="UTF-8">
 <title>Sadeus Family</title>
 <style>
-  body {
+   body {
+    margin: 0;
+    font-family: 'Arial Black', sans-serif;
+    background: url('https://i.imgur.com/tonimage.jpg') no-repeat center center fixed;
+    background-size: cover;
+    color: #FFD700;
+    padding: 40px;
+    line-height: 1.5;
+  }
     margin: 0;
     font-family: 'Arial Black', sans-serif;
     background: linear-gradient(135deg, #000000, #1a1a1a);
