--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
   .button-container, .signature { text-align: center; margin-top: 20px; }
   .signature p { font-size: 1.1em; color: #FFD700; margin-top: 10px; }
 
+  /* Serpent fluide sur les bords */
   .snake {
     position: fixed;
     top: 0; left: 0;
@@ -74,17 +75,26 @@
     z-index: 0;
   }
 
-  .snake svg { width: 100%; height: 100%; }
-  .snake path {
-    fill: none;
-    stroke: #00FF00;
-    stroke-width: 6;
-    stroke-linecap: round;
-    stroke-dasharray: 20 20;
-    animation: moveSnake 4s linear infinite;
+  .snake div {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border: 4px solid #00FF00;
+    border-radius: 50%;
+    animation: moveSnake 6s linear infinite;
   }
 
-  @keyframes moveSnake { to { stroke-dashoffset: -40; } }
+  .snake div:nth-child(1) { top: 0; left: 0; animation-delay: 0s; }
+  .snake div:nth-child(2) { top: 0; left: 100%; animation-delay: 2s; }
+  .snake div:nth-child(3) { top: 100%; left: 0; animation-delay: 4s; }
+
+  @keyframes moveSnake {
+    0% { transform: translate(0,0); }
+    25% { transform: translate(100vw,0); }
+    50% { transform: translate(100vw,100vh); }
+    75% { transform: translate(0,100vh); }
+    100% { transform: translate(0,0); }
+  }
 
 </style>
 </head>
@@ -142,11 +152,11 @@
 </div>
 </div>
 
-<!-- Serpent vert -->
+<!-- Serpent fluide -->
 <div class="snake">
-  <svg>
-    <path d="M10,10 h780 v580 h-780 z" />
-  </svg>
+  <div></div>
+  <div></div>
+  <div></div>
 </div>
 
 </body>
