--- a/index.html
+++ b/index.html
@@ -107,7 +107,11 @@
         <h1>◈ 𓆙 𝘽𝙞𝙚𝙣𝙫𝙚𝙣𝙪𝙚 <br>au cœur de la famille Sadeus ☘️</h1>
 
         <div class="intro">
-            ◈ 𝗡𝗼𝘂𝘀 𝗻𝗲 𝗰𝗼𝗻𝗻𝗮𝗶𝘀𝘀𝗼𝗻𝘀 pas l'impossible car ce qu'ils appellent impossible est possible chez les Sadeus.
+            ◈ 𝗡𝗼𝘂𝘀 𝗻𝗲 𝗰𝗼𝗻𝗻𝗮𝗶𝘀𝘀𝗼𝗻𝘀 pas l'impossible car ce qu'ils appellent impossible est possible chez les Sadeus
+            
+            ◈ 𝗟𝗮 𝗽𝘂𝗿𝗴𝗲 𝗻𝗼𝘂𝘀 𝗮𝗽𝗽𝗮𝗿𝘁𝗶𝗲𝗻𝘁 𝗻𝗼𝘂𝘀 𝘃𝗶𝘃𝗼𝗻𝘀 𝗾𝘂𝗲 𝗽𝗼𝘂𝗿 𝗹𝗮 𝗱𝗼𝗺𝗶𝗻𝗮𝘁𝗶𝗼𝗻, 𝗻𝗼𝘂𝘀 𝗱𝗶𝘀𝘁𝗿𝗶𝗯𝘂𝗼𝗻𝘀 𝗹'𝗵𝘂𝗺𝗶𝗹𝗶𝗮𝘁𝗶𝗼𝗻 à 𝗰𝗲𝘂𝘅 𝗾𝘂𝗶 𝗼𝘀𝗲𝗻𝘁 𝗻𝗼𝘂𝘀 𝗱𝗲𝗳𝗶𝗲𝗿 𝗻𝗼𝘂𝘀 𝗻𝗲 𝗰𝗼𝗻𝗻𝗮𝗶𝘀𝘀𝗼𝗻𝘀 𝗽𝗮𝘀 𝗰𝗲 𝗺𝗼𝘁 𝗾𝘂'𝗶𝗹𝘀 𝗮𝗽𝗽𝗲𝗹𝗹𝗲𝗻𝘁 "𝗱𝗲𝗳𝗮𝗶𝘁𝗲" 𝗻𝗼𝘁𝗿𝗲 𝗮𝘀𝗰𝗲𝗻𝘀𝗶𝗼𝗻 𝗲𝘀𝘁 𝘀𝗮𝗻𝘀 𝗲𝗰𝗵𝗲𝗹𝗹𝗲 𝘀𝗲𝘂𝗹𝗲𝘀 𝗹𝗲𝘀 𝗲𝘁𝗼𝗶𝗹𝗲𝘀 𝘀𝗼𝗻𝘁 𝗻𝗼𝘀 𝗰𝗼𝗹𝗹𝗲𝗴𝘂𝗲𝘀 𝗻𝗼𝘂𝘀 𝗻'𝗮𝘃𝗶𝗼𝗻𝘀 𝗽𝗮𝘀 𝗱𝗲 𝗿𝗶𝘃𝗮𝗹𝗲 𝗰𝗮𝗿 𝗹𝗮 𝗽𝗲𝗿𝗳𝗲𝗰𝘁𝗶𝗼𝗻 𝗻'𝗮 𝗽𝗮𝘀 𝗱𝗲 𝗿𝗶𝘃𝗮𝗹𝗲.
+
+◈ 𝗘𝗻 𝘁𝗮𝗻𝘁 𝗾𝘂𝗲 𝗳𝗮𝗺𝗶𝗹𝗹𝗲 𝗻𝘂𝗺𝗲𝗿𝗼 𝟭 𝗱𝘂 𝗿𝗲𝘀𝗲𝗮𝘂 𝗻𝗼𝘁𝗿𝗲 𝘀𝘂𝗽𝗿𝗲𝗺𝗮𝘁𝗶𝗲 𝗲𝘀𝘁 𝗮𝗰𝗾𝘂𝗶𝘀𝗲..
         </div>
 
         <h2>CLAN DOMINER</h2>
